--- a/projects/shindg-contract/package.json
+++ b/projects/shindg-contract/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shindg-contract",
-  "version": "0.0.0",
+  "name": "shindg",
+  "version": "0.9.1",
   "license": "MIT",
   "scripts": {
     "generate-client": "algokit generate client contracts/artifacts/ --language typescript  --output contracts/clients/{contract_name}Client.ts",
@@ -9,15 +9,18 @@
     "build": "npm run compile-contract && npm run generate-client",
     "test": "npm run build && jest",
     "lint": "eslint . --ext .ts",
-    "fix": "eslint . --ext .ts --fix"
+    "fix": "eslint . --ext .ts --fix",
+    "build-package": "tsup src/index.ts --format cjs,esm --clean --sourcemap index --dts src/index.ts --dts-resolve",
+    "publishCmd": "npm publish"
   },
   "dependencies": {
-    "@algorandfoundation/algokit-utils": "^6.0.2",
-    "algosdk": "^2.7.0"
+    "@algorandfoundation/algokit-utils": "^6.0.5",
+    "algosdk": "^2.8.0",
+    "tsup": "^8.1.0"
   },
   "devDependencies": {
-    "@algorandfoundation/algokit-client-generator": "^2.6.0",
-    "@algorandfoundation/tealscript": "^0.92.0",
+    "@algorandfoundation/algokit-client-generator": "^3.0.3",
+    "@algorandfoundation/tealscript": "^0.94.1",
     "@jest/globals": "^29.7.0",
     "@joe-p/algokit-generate-component": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -29,8 +32,8 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
+    "prettier": "^3.3.1",
+    "ts-jest": "^29.1.4",
     "typescript": "5.0.2"
   }
 }
